--- a/app/src/main/res/layout/fra_coupon.xml
+++ b/app/src/main/res/layout/fra_coupon.xml
@@ -458,7 +458,8 @@
             <ListView
                 android:id="@+id/couponListLV"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginLeft="9.5dp" />
 
 
         </LinearLayout>
