--- a/app/src/main/res/layout/fra_use.xml
+++ b/app/src/main/res/layout/fra_use.xml
@@ -365,6 +365,7 @@
             </LinearLayout>
 
             <RelativeLayout
+                android:id="@+id/kakaoRL"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:background="#f3f3f3">
