--- a/app/src/main/res/layout/dlg_agree.xml
+++ b/app/src/main/res/layout/dlg_agree.xml
@@ -17,6 +17,7 @@
         android:layout_marginLeft="25dp"
         tools:ignore="MissingPrefix">
         <ScrollView
+            android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <LinearLayout
@@ -24,12 +25,26 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <TextView
+                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="18dp"
                 android:text="이용약관"/>
+
+                <ImageView
+                    android:id="@+id/closeIV"
+                    android:padding="15dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:src="@mipmap/close_op"/>
+            </RelativeLayout>
             <WebView
                 android:id="@+id/webWV"
                 android:layout_width="match_parent"
