--- a/app/src/main/res/layout/fra_point_accumulate.xml
+++ b/app/src/main/res/layout/fra_point_accumulate.xml
@@ -51,7 +51,17 @@
                 android:text="100P"
                 android:textColor="#0078ce"
                 android:textSize="100dp" />
-
+            <TextView
+                android:id="@+id/membership_per2TV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:visibility="gone"
+                android:letterSpacing="-0.03"
+                android:lineSpacingExtra="-10sp"
+                android:text=""
+                android:textColor="#acacac"
+                android:textSize="40sp" />
             <TextView
                 android:id="@+id/stack_titleTV"
                 android:visibility="gone"
@@ -75,6 +85,17 @@
                 android:text="100P"
                 android:textColor="#0078ce"
                 android:textSize="100dp" />
+            <TextView
+                android:id="@+id/membership_perTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:visibility="gone"
+                android:letterSpacing="-0.03"
+                android:lineSpacingExtra="-10sp"
+                android:text=""
+                android:textColor="#acacac"
+                android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/titleTV"
