--- a/app/src/main/res/layout/item_contract_img.xml
+++ b/app/src/main/res/layout/item_contract_img.xml
@@ -11,10 +11,10 @@
         >
 
         <ImageView
-            android:scaleType="fitXY"
             android:id="@+id/c_imgIV"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             />
 
 
