--- a/app/src/main/res/layout/fra_point_accumulate.xml
+++ b/app/src/main/res/layout/fra_point_accumulate.xml
@@ -109,6 +109,7 @@
                 android:textSize="51dp" />
 
             <LinearLayout
+                android:id="@+id/ppLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="38.5dp"
