--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_height="80dp"
         android:orientation="horizontal">
         <TextView
+            android:visibility="gone"
             android:id="@+id/logoutTV"
             android:layout_width="100dp"
             android:layout_height="match_parent"
